--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -91,8 +91,7 @@ services:
   engagement-view-integration-tests:
     image: cypress/included:5.6.0
     working_dir: /test
-    #command: --browser chrome --headless # entrypoint is: cypress run
-    entrypoint: sh
+    command: --browser chrome --headless # entrypoint is: cypress run
     volumes: 
       - .:/test
     depends_on:
