Rename the Rust Docker param PROFILE to CARGO_PROFILE.

--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust:1-slim-buster AS base
 
-ARG PROFILE=debug
+ARG CARGO_PROFILE=debug
 
 SHELL ["/bin/bash", "-c"]
 
@@ -33,13 +33,13 @@ FROM base AS build
 RUN --mount=type=cache,mode=0777,target=/root/.cache/sccache \
     --mount=type=secret,id=rust_env,dst=/grapl/env \
     source /grapl/env; \
-    case "${PROFILE}" in \
+    case "${CARGO_PROFILE}" in \
       debug) \
         cargo build ;; \
       release) \
         cargo build --release ;; \
       *) \
-        echo "ERROR: Unknown profile: ${PROFILE}"; \
+        echo "ERROR: Unknown profile: ${CARGO_PROFILE}"; \
         exit 1 ;; \
     esac
 
@@ -68,54 +68,54 @@ RUN --mount=type=cache,mode=0777,target=/root/.cache/sccache \
 #
 FROM debian:buster-slim AS rust-dist
 
-ARG PROFILE=debug
+ARG CARGO_PROFILE=debug
 
 USER nobody
 
 # analyzer-dispatcher
 FROM rust-dist AS analyzer-dispatcher-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/analyzer-dispatcher" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/analyzer-dispatcher" /
 CMD ["/analyzer-dispatcher"]
 
 # generic-subgraph-generator
 FROM rust-dist AS generic-subgraph-generator-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/generic-subgraph-generator" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/generic-subgraph-generator" /
 CMD ["/generic-subgraph-generator"]
 
 # graph-merger
 FROM rust-dist AS graph-merger-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/graph-merger" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/graph-merger" /
 CMD ["/graph-merger"]
 
 # metric-forwarder
 FROM rust-dist AS metric-forwarder-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/metric-forwarder" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/metric-forwarder" /
 CMD ["/metric-forwarder"]
 
 # node-identifier
 FROM rust-dist AS node-identifier-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/node-identifier" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/node-identifier" /
 CMD ["/node-identifier"]
 
 # node-identifier-retry-handler
 FROM rust-dist AS node-identifier-retry-handler-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/node-identifier-retry-handler" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/node-identifier-retry-handler" /
 CMD ["/node-identifier-retry-handler"]
 
 # sysmon-subgraph-generator
 FROM rust-dist AS sysmon-subgraph-generator-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/sysmon-subgraph-generator" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/sysmon-subgraph-generator" /
 CMD ["/sysmon-subgraph-generator"]
 
 # osquery-subgraph-generator
 FROM rust-dist AS osquery-subgraph-generator-deploy
 
-COPY --from=build "/grapl/target/${PROFILE}/osquery-subgraph-generator" /
+COPY --from=build "/grapl/target/${CARGO_PROFILE}/osquery-subgraph-generator" /
 CMD ["/osquery-subgraph-generator"]
