--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
       context: src/rust
       target: metric-forwarder-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     tty: false
     environment:
       - "IS_LOCAL=True"
@@ -120,7 +120,7 @@ services:
       context: src/rust
       target: sysmon-subgraph-generator-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     tty: false
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -146,7 +146,7 @@ services:
       context: src/rust
       target: osquery-subgraph-generator-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     tty: false
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -172,7 +172,7 @@ services:
       context: src/rust
       target: node-identifier-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -210,7 +210,7 @@ services:
       context: src/rust
       target: node-identifier-retry-handler-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -248,7 +248,7 @@ services:
       context: src/rust
       target: graph-merger-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
@@ -279,7 +279,7 @@ services:
       context: src/rust
       target: analyzer-dispatcher-deploy
       args:
-        - PROFILE=${PROFILE:-debug}
+        - CARGO_PROFILE=${CARGO_PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
