--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -6,6 +6,7 @@ SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
         wait-for-it \
+        ca-certificates \
         wget \
         zip \
     && rm -rf /var/lib/apt/lists/*
