--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -7,6 +7,7 @@ SHELL ["/bin/bash", "-c"]
 RUN apt-get update && apt-get install -y --no-install-recommends \
         wait-for-it \
         ca-certificates \
+        netbase \
         wget \
         zip \
     && rm -rf /var/lib/apt/lists/*
