--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ volumes:
 x-common-variables:
   aws-region: &aws-region
     AWS_REGION: "us-east-1"
+    AWS_DEFAULT_REGION: "us-east-1"  # boto3 prefers this one
   sqs-endpoint: &sqs-endpoint
     SQS_ENDPOINT: "http://sqs.us-east-1.amazonaws.com:9324"
     SQS_ACCESS_KEY_ID: "dummy_cred_aws_access_key_id"
@@ -297,7 +298,7 @@ services:
       <<: *sqs-endpoint
       <<: *s3-endpoint
       <<: *dynamodb-endpoint
-      MG_ALPHAS: "http://master_graph:9080"
+      <<: *mg-alphas
       GRAPL_SCHEMA_TABLE: "local-grapl-grapl_schema_table"
       IS_LOCAL: "True"
     tty: false
@@ -330,8 +331,7 @@ services:
       DEST_QUEUE_URL: "http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-analyzer-executor-queue"
       DEST_BUCKET_NAME: "local-grapl-analyzer-dispatched-bucket"
       ANALYZER_BUCKET: "local-grapl-analyzers-bucket"
-      AWS_REGION: "us-east-1"
-      AWS_DEFAULT_REGION: "us-east-1"
+      <<: *aws-region
       <<: *sqs-endpoint
       <<: *s3-endpoint
       <<: *dynamodb-endpoint
@@ -388,10 +388,9 @@ services:
       MESSAGECACHE_PORT: "6379"
       IS_LOCAL: "True"
       GRPC_ENABLE_FORK_SUPPORT: "1"
-      MG_ALPHAS: "master_graph:9080"
+      <<: *mg-alphas
       IS_RETRY: "False"
-      AWS_REGION: "us-east-1"
-      AWS_DEFAULT_REGION: "us-east-1"
+      <<: *aws-region
       <<: *sqs-endpoint
       <<: *s3-endpoint
       BUCKET_PREFIX: "local-grapl"
