--- a/src/python/graplctl/pyproject.toml
+++ b/src/python/graplctl/pyproject.toml
@@ -12,6 +12,7 @@ boto3 = "^1.16.35"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.790"
+boto3-stubs = {extras = ["ec2", "s3", "ssm", "cloudwatch", "sns", "sqs", "route53"], version = "^1.16.52"}
 
 [tool.poetry.scripts]
 graplctl = "graplctl:cli.main"
