Okay, fixed dockerfile

--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /grapl
 # install deps as separate steps to leverage build cache
 COPY package.json package.json
 COPY yarn.lock yarn.lock
+COPY .yarnrc.yml .yarnrc.yml
+COPY .yarn/releases .yarn/releases
 RUN yarn install
 
 # now copy all sources
