--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -99,6 +99,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Build integration tests
+        run: |
+          echo "unset RUSTC_WRAPPER" > rust_env.sh
+          GRAPL_RUST_ENV_FILE=rust_env.sh GRAPL_LOG_LEVEL=DEBUG make build-test-integration
 
       - name: Run integration tests
         run: |
@@ -144,6 +149,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Build end-to-end tests
+        run: |
+          GRAPL_LOG_LEVEL=DEBUG \
+          DUMP_ARTIFACTS=True \
+          make build-test-e2e
+          
       - name: Run end-to-end tests
         run: |
           GRAPL_LOG_LEVEL=DEBUG \
