--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.82.0",
-    "@types/jest": "26.0.x",
-    "@types/node": "14.14.x",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
     "@types/uuid": "8.3.x",
     "eslint": "^7.18.0",
     "jest": "26.6.x",
@@ -50,7 +50,7 @@
     "@types/node-dir": "0.0.33",
     "aws-sdk": "2.784.x",
     "cdk": "^1.77.0",
-    "cdk-watchful": "^0.5.38",
+    "cdk-watchful": "^0.5.86",
     "node-dir": "0.1.17",
     "node-env-file": "0.1.8",
     "source-map-support": "0.5.19"
