--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -89,14 +89,17 @@ jobs:
             echo "CHECK_PYPI_VERSION_ARGS=true" >> $GITHUB_ENV
           fi
 
-      - name: Check whether grapl_graph_descriptions version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl_graph_descriptions \
-            $(cat src/rust/graph-descriptions/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
+      # TODO: Reactivate this once the new graplinc-grapl-api package
+      # has been pushed to PyPi
+      #
+      # - name: Check whether graplinc-grapl-api version has been bumped
+      #   run: |
+      #     . venv/bin/activate
+      #     python etc/build_scripts/check_pypi_version.py \
+      #       graplinc-grapl-api \
+      #       $(cat src/python/graplinc-grapl-api/VERSION) \
+      #       $CHECK_PYPI_VERSION_ARGS
+      #     deactivate
 
       - name: Check whether grapl_analyzerlib version has been bumped
         run: |
