--- a/test/docker-compose.unit-tests-python.yml
+++ b/test/docker-compose.unit-tests-python.yml
@@ -4,16 +4,16 @@ version: "3.8"
 
 services:
 
-  grapl-graph-descriptions-test:
-    image: grapl/grapl-graph-descriptions-test:${TAG:-latest}
+  graplinc-grapl-api-test:
+    image: grapl/graplinc-grapl-api-test:${TAG:-latest}
     build:
       context: ${PWD}/src
       dockerfile: ./python/Dockerfile
-      target: graph-descriptions-test
+      target: graplinc-grapl-api-test
     command: |
       bash -c ' \
         source venv/bin/activate && \
-        cd graph-descriptions && \
+        cd python/graplinc-grapl-api && \
         py.test -n auto -m "not integration_test"
         '
 
