Add black and isort to Pants for Python linting and formatting
We already use `black` and `isort` for linting and formatting, but now
we can let Pants handle that.

To check that all Python code conforms to our desired format, run:
```sh
./pants lint ::
```

If any violations are found, they can be fixed with:
```sh
./pants fmt ::
```

For some reason, the Pants Black plugin only seems to behave properly
if the `pyproject.toml` file is at the root of the repository; using
the original in `src/python` resulted in no files being formatted. The
`isort` plugin didn't have this problem.

In any event, placing the `pyproject.toml` configuration for these
tools at the root should help make it easier to integrate with editor configurations.

Additionally, we can use `isort`'s profiles to simplify its configuration.

(The old `pyproject.toml` file is left in place for now to facilitate
the transition to Pants; it will eventually be removed entirely.)

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,9 @@
 pants_version = "2.2.0"
 backend_packages = [
   "pants.backend.codegen.protobuf.python",
-  "pants.backend.python"
+  "pants.backend.python",
+  "pants.backend.python.lint.isort",
+  "pants.backend.python.lint.black",
 ]
 
 # Given how our code is currently structured, with package and test
@@ -48,4 +50,16 @@ inits = true
 
 [python-protobuf]
 runtime_dependencies = ["3rdparty/python:protobuf"]
-# mypy_plugin = true # TODO: we'll probably want this at some point (https://www.pantsbuild.org/docs/protobuf)
+
+[black]
+config = "pyproject.toml"
+version = "black==20.8b1"
+
+[isort]
+config = "pyproject.toml"
+# This option is required to ensure the `skip_globs` configuration is
+# honored for how Pants calls isort. If we ever get to the point where
+# we can remove `skip_globs` from the `tool.isort` entry in
+# `pyproject.toml`, then we can remove this argument as well.
+args = [ "--filter-files" ]
+version = "isort==5.6.4"
