--- a/buf.yaml
+++ b/buf.yaml
@@ -13,6 +13,10 @@ lint:
     # We have vendored some of the Google protobuf definitions; we
     # don't need to lint them, and will be able to remove them soon.
     - google
+  # TODO: Only allowing this temporarily for Edge#edgeName; remove at
+  # earliest possible convenience, since this allows for uncontrolled
+  # ignoring of arbitrary lints.
+  allow_comment_ignores: true
 breaking:
   # https://docs.buf.build/breaking-configuration
   use:
