grapl-prelude becomes grapl

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -5,8 +5,8 @@ members = [
     "./derive-dynamic-node",
     "./graph-descriptions",
     "./graph-merger",
+    "./grapl",
     "./grapl-config",
-    "./grapl-prelude",
     "./grapl-observe",
     "./metric-forwarder",
     "./node-identifier",
