--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -134,10 +134,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run end-to-end tests
-        run: |
-          GRAPL_LOG_LEVEL=DEBUG \
-          DUMP_ARTIFACTS=True \
-          make test-e2e
+        uses: nick-invision/retry@v2
+        with:
+          max_attempts: 3
+          retry_on: error
+          timeout_minutes: 30  # and usually much less
+          command: |
+            GRAPL_LOG_LEVEL=DEBUG \
+            DUMP_ARTIFACTS=True \
+            make test-e2e
 
       # NOTE: This requires >= py37
       - name: 'Collect e2e test artifacts'
