`grapl::` prelude crate (#461)
* Issue 433 - rust grapl prelude

Rename to prelude

* rebase

* grapl-prelude becomes grapl

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "./derive-dynamic-node",
     "./graph-descriptions",
     "./graph-merger",
+    "./grapl",
     "./grapl-config",
     "./grapl-observe",
     "./metric-forwarder",
