Get higher signal out of the flaky e2e tests - retries, and allow for a semi-failure (#580)
* Get higher signal out of the flaky e2e tests - retries, and allow for a semi-failure

* low tech retry

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -135,9 +135,11 @@ jobs:
 
       - name: Run end-to-end tests
         run: |
-          GRAPL_LOG_LEVEL=DEBUG \
-          DUMP_ARTIFACTS=True \
-          make test-e2e
+          # A cheap, low-tech retry. If any of them ever exits 0, it short circuits.
+          GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e ||
+          GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e ||
+          GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e
+   
 
       # NOTE: This requires >= py37
       - name: 'Collect e2e test artifacts'
