--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -31,17 +31,15 @@ FROM grapl-cdk-build AS grapl-cdk-test
 # We need the Rust Dockerfile to run the tests
 WORKDIR /home/grapl
 COPY src/rust/Dockerfile src/rust/Dockerfile
+COPY src/python/Dockerfile src/python/Dockerfile
 
 # Make fake zip files to appease the CDK tests
 WORKDIR /home/grapl/src/js/grapl-cdk/zips
 RUN touch \
-  analyzer-dispatcher-latest.zip \
-  analyzer-executor-latest.zip \
   dgraph-ttl-latest.zip \
   engagement-creator-latest.zip \
   engagement-edge-latest.zip \
   engagement-ux-latest.zip \
-  graph-merger-latest.zip \
   graphql-endpoint-latest.zip \
   metric-forwarder-latest.zip \
   model-plugin-deployer-latest.zip \
@@ -49,6 +47,7 @@ RUN touch \
   node-identifier-retry-handler-latest.zip \
   osquery-subgraph-generator-latest.zip \
   sysmon-subgraph-generator-latest.zip \
+  swarm-lifecycle-event-handler-latest.zip \
   ux-router-latest.zip
 
 WORKDIR /home/grapl/src/js/grapl-cdk
