--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -1,5 +1,8 @@
 name: Grapl Lint
 
+env:
+  PANTS_CONFIG_FILES: "['pants.toml', 'pants.ci.toml']"
+
 on:
   pull_request:
     types: [opened, synchronize, reopened]
@@ -82,6 +85,30 @@ jobs:
         if: ${{ failure() }}
         run: echo "Run etc/ci_scripts/py_lint.sh without the flag. That's it!"
 
+  # Run the new Pants-managed linting alongside the old while we transition.
+  # Eventually, this will be the only Python linting step.
+  python-pants-lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Pants Cache
+        uses: actions/cache@v2
+        with:
+          # We'll set up a new cache when our lock-file changes
+          key: pants-${{ matrix.python-version }}-${{ hashFiles('3rdparty/python/constraints.txt') }}
+          path: |
+            ~/.cache/pants/setup
+            ~/.cache/pants/named_caches
+            ~/.cache/pants/lmdb_store
+      - name: Lint
+        run: "./pants lint ::"
 
   check-pypi:
     runs-on: ubuntu-latest
