--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-grapl-observe = {path = "../grapl-observe"}
+grapl-observe = { path = "../grapl-observe" }
+grapl_utils = { path = "../grapl_utils" }
 
 rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
 rusoto_s3 = {version = "0.45", default_features = false, features=["rustls"]}
@@ -36,4 +37,4 @@ chrono = "0.4.19"
 aws_lambda_events = "0.3.1"
 parking_lot = "0.11.1"
 stopwatch = "0.0.7"
-lru-cache = "0.1.2"
+lru = "0.6"
