--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-src/rust/graph-descriptions/grapl_graph_descriptions
-
 # Mac OS
 .DS_Store
 
@@ -7,68 +5,29 @@ src/rust/graph-descriptions/grapl_graph_descriptions
 test/cypress/screenshots
 test/cypress/videos
 
-lambda/
-__pycache__/
-*.pyc
-.mypy_cache/
-events.xml
-events2.xml
-events3.xml
-events4.xml
-target/
-node_modules/
-.idea/
-*.iml
+# Environments
 .env
 venv/
 
-log2/
-
-word-macro-analyzer/*/
-bootstrap
-
-# Byte-compiled / optimized / DLL files
+# Python misc
 __pycache__/
 *.py[cod]
 *$py.class
-
-target/
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-# lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 .mypy_cache
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Rust outputs
+target/
 
-# Installer logs
-pip-log.txt
+# Node packages
+node_modules/
 
+# Distribution / packaging
+build/
+dist/
+*.zip
+
+# IDE files
 *.code-workspace
 *.vscode
-*.zip
-stale_outputs_checked
-.log/
-.hypothesis/
+.idea/
+*.iml
