--- a/pants.toml
+++ b/pants.toml
@@ -20,16 +20,16 @@ root_patterns = [
   "/src/proto",
   "/src/python/analyzer-deployer",
   "/src/python/analyzer_executor/src",
-  "/src/python/analyzer_executor/src/analyzer_executor_lib",
   "/src/python/analyzer_executor/tests",
   "/src/python/engagement-creator/src",
   "/src/python/engagement-creator/tests",
-  "/src/python/engagement_edge/src",
+  "/src/python/engagement_edge",
   "/src/python/engagement_edge/tests",
   "/src/python/grapl_analyzerlib",
   "/src/python/grapl-common",
   "/src/python/grapl-dgraph-ttl",
   "/src/python/grapl_e2e_tests",
+  "/src/python/graplctl",
   "/src/python/graplinc",
   "/src/python/grapl-model-plugin-deployer/src",
   "/src/python/grapl-model-plugin-deployer/tests",
